; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/s5p-g2d/extr_g2d.c_get_frame.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/s5p-g2d/extr_g2d.c_get_frame.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.g2d_frame = type { i32 }
%struct.g2d_ctx = type { %struct.g2d_frame, %struct.g2d_frame }

@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.g2d_frame* (%struct.g2d_ctx*, i32)* @get_frame to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.g2d_frame* @get_frame(%struct.g2d_ctx* %0, i32 %1) #0 {
  %3 = alloca %struct.g2d_frame*, align 8
  %4 = alloca %struct.g2d_ctx*, align 8
  %5 = alloca i32, align 4
  store %struct.g2d_ctx* %0, %struct.g2d_ctx** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %13 [
    i32 128, label %7
    i32 129, label %10
  ]

7:                                                ; preds = %2
  %8 = load %struct.g2d_ctx*, %struct.g2d_ctx** %4, align 8
  %9 = getelementptr inbounds %struct.g2d_ctx, %struct.g2d_ctx* %8, i32 0, i32 1
  store %struct.g2d_frame* %9, %struct.g2d_frame** %3, align 8
  br label %17

10:                                               ; preds = %2
  %11 = load %struct.g2d_ctx*, %struct.g2d_ctx** %4, align 8
  %12 = getelementptr inbounds %struct.g2d_ctx, %struct.g2d_ctx* %11, i32 0, i32 0
  store %struct.g2d_frame* %12, %struct.g2d_frame** %3, align 8
  br label %17

13:                                               ; preds = %2
  %14 = load i32, i32* @EINVAL, align 4
  %15 = sub nsw i32 0, %14
  %16 = call %struct.g2d_frame* @ERR_PTR(i32 %15)
  store %struct.g2d_frame* %16, %struct.g2d_frame** %3, align 8
  br label %17

17:                                               ; preds = %13, %10, %7
  %18 = load %struct.g2d_frame*, %struct.g2d_frame** %3, align 8
  ret %struct.g2d_frame* %18
}

declare dso_local %struct.g2d_frame* @ERR_PTR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
